--- a/ASPNETCORERoleManagement/appsettings.json
+++ b/ASPNETCORERoleManagement/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=212.1.211.6;Database=hosti754_pbamnu;Uid=hosti754_pbamnu;Pwd=Sebastian1996;",
+    "DefaultConnection": "Server=localhost;Database=projectrh;Uid=root;Pwd=K5rch1t4v34;",
     "DefaultConnection5": "server=104.154.67.8;Uid=root;Pwd=toluca2017;persistsecurityinfo=True;certificatefile=client.pfx;certificatepassword=guadalajara;database=rhdbftabla;allowuservariables=True",
     "DefaultConnection2": "server=localhost;Uid=root;Pwd=toluca2017;persistsecurityinfo=True;certificatefile=client.pfx;certificatepassword=guadalajara;database=rhdbftabla;allowuservariables=True"
 
