--- a/ASPNETCORERoleManagement/appsettings.json
+++ b/ASPNETCORERoleManagement/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=localhost;port=3306;Database=projecth;Uid=root;Pwd=K5rch1t4v34;",
-    "DefaultConnection": "Server=localhost;port=3306;Database=projecrh;Uid=root;Pwd=K5rch1t4v34;",
+    "DefaultConnection": "Server=localhost;port=3306;Database=projecth;Uid=root;Pwd=K5rch1t4v34;",
+    "DefaultConnection1": "Server=localhost;port=3306;Database=projecrh;Uid=root;Pwd=K5rch1t4v34;",
     "DefaultConnection5": "server=104.154.67.8;Uid=root;Pwd=toluca2017;persistsecurityinfo=True;certificatefile=client.pfx;certificatepassword=guadalajara;database=rhdbftabla;allowuservariables=True",
     "DefaultConnection2": "server=localhost;Uid=root;Pwd=toluca2017;persistsecurityinfo=True;certificatefile=client.pfx;certificatepassword=guadalajara;database=rhdbftabla;allowuservariables=True"
 
