Cambios Tareas Personals 2018-11-06

--- a/ASPNETCORERoleManagement/ASPNETCORERoleManagement.csproj
+++ b/ASPNETCORERoleManagement/ASPNETCORERoleManagement.csproj
@@ -7,6 +7,8 @@
 
 
   <ItemGroup>
+    <PackageReference Include="DatePicker.HTMLHelper" Version="1.2.2.1" />
+    <PackageReference Include="jQuery.UI.Combined" Version="1.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
